# SystemTradingByREST-API

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  analyze_optimal_delay.py  analyze_sell_condition.py  check_data_units.py  convert_api_doc_to_md.py  docker-compose.yml  docker-entrypoint.sh  environment.yml  main.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  test_market_holidays.py  test_market_status.py  test_resolve_stock_name.py  test_universe_cache.py  untitled:plan-isNaverCrawlAllowed.prompt.md  watchdog.sh  키움 REST API 문서.xlsx
.github/: copilot-instructions.md
.github/prompts/: plan-resolveStockNamePlan.prompt.md
.github/workflows/: value-strategy.yml
.omo/drafts/: rsi-to-value-transition.md  value-strategy-github-actions.md
.omo/evidence/: task-1-branch-diff-analysis.md  task-2-merge-prep.md  task-3-env-blueprint.md  task-4-dry-run-output.txt  (+2 more)
api/: AGENTS.md  Kiwoom.py
backtest/: AGENTS.md  ANALYSIS_REPORT.md  BACKTEST_ENGINE_SYNC_LOG.md  CUMULATIVE_RSI_ANALYSIS.md  ETF_UNIVERSE_DECISION_POLICY.md  FETCH_DATA_README.md  MDD_REDUCTION_FINAL_RECOMMENDATION.md  MDD_REDUCTION_METHODS.md  README.md  STOP_LOSS_ANALYSIS.md  __init__.py  analyze_etf_regime.py  analyze_etf_universe.py  analyze_profitability_focus.py  analyze_results.py  analyze_risk_metrics.py  backtest_engine.py  build_historical_universe.py  compare_results.py  compare_stop_loss.py  compare_two_backtests.py  fetch_historical_data.py  momentum_engine.py  optimize_mdd_reduction.py  optimize_stop_loss.py  rebuild_snapshots.py  recommend_stoploss.py  run_backtest.py  run_momentum.py  run_universe_scenarios.py  summarize_universe_scenarios.py  trend_follow_engine.py  value_engine.py  vb_daily_engine.py  vb_engine.py
deploy/: systemtrading-watchdog.service.template
docs/: README.md  UNIVERSE_CACHE.md  b2c-service-business-plan-deep.md  b2c-service-business-plan.md  docker.md  simple-service-business-plan.md
scripts/: compare_kiwoom_project_rsi.py  refresh_universe_now.py  restore_purchase_dates.py  run_check_universe.py  run_value_strategy.py  sample_kiwoom_chart.json  start_watchdog.sh  stop_watchdog.sh  test_ensure_holdings.py  test_ensure_holdings_additional.py  test_get_price_data_mock.py  test_naver_crawling.py  test_send_order_mock.py  test_telegram.py  watchdog.py
strategy/: AGENTS.md  RSIStrategy.py
tests/: AGENTS.md  README.md  conftest.py  test_execution_t_plus_one.py  test_get_code_list_by_market.py  test_integration_account.py  test_integration_order.py  test_integration_readonly.py  test_make_up_universe_crawler.py  test_rsi_values.py  test_universe_functions.py
util/: AGENTS.md  const.py  db_helper.py  env_approver.py  env_reloader.py  logging_config.py  make_up_universe.py  notifier.py  practice_crawling.py  price_fetcher.py  rsi_calc.py  shutdown.py  telegram_test.py  time_helper.py  trade_logger.py
(+213 files in other folders)
