[project]
name = "system-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Durk-jae Yun",email = "iam00th@hanmail.net"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "finance-datareader (>=0.9.96,<0.10.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=7.0.0,<8.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)",
    "pytest-xdist (>=3.0.0,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
