[project]
name = "system-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Durk-jae Yun",email = "iam00th@hanmail.net"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "numpy>=2.3.5,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "lxml>=6.0.2,<7.0.0",
    "fastparquet>=2022.12.0",
    "pykrx>=0.4.30",
    "websockets>=15.0.1,<16.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "setuptools>=80.10.2,<81.0.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-xdist>=3.0.0,<4.0.0"
]

backtest = [
    "matplotlib>=3.10.7,<4.0.0"
]

xlsx = [
    "openpyxl>=3.1.2,<4.0.0"
]
